--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="img/Avator_R_8Bit_Rendered256.png"
+      href="img/Avator.png"
       type="image/x-icon"
     />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -14,24 +14,30 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>About OriPoin</title>
+    <style>
+      .hans-container {
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        width: 100%;
+        height: 80px;
+      }
+    </style>
+    <div id="hans-bolang"></div>
+    <script src="https://api.vvhan.com/api/bolang"></script>
+    <title>关于亞晨</title>
   </head>
 
   <body>
     <div class="profile-card">
       <div class="card-header">
         <div class="pic">
-          <img src="img/Avator_R_8Bit_Rendered256.png" alt="" />
+          <img src="img/Avator.png" alt="" />
         </div>
-        <div class="name">Ori Poin</div>
-        <div class="desc">A EE Student</div>
+        <div class="name">亞晨</div>
+        <div class="desc">A student</div>
         <div class="links">
-          <a href="https://blog.oripoin.me" target="_blank">
-            <i class="iconfont icon-blog"></i>
-          </a>
-          <a href="https://open.oripoin.me" target="_blank">
-            <i class="iconfont icon-B"></i>
-          </a>
           <a href="Mailto:OriPoin@outlook.com">
             <i class="iconfont icon-youxiang1"></i>
           </a>
@@ -43,15 +49,6 @@
           <a href="https://space.bilibili.com/350626647" target="_blank">
             <i class="iconfont icon-bilibili-fill"></i>
           </a>
-          <a
-            href="https://www.zhihu.com/people/wang-ya-chen-66-95"
-            target="_blank"
-          >
-            <i class="iconfont icon-zhihu"></i>
-          </a>
-          <a href="https://blog.csdn.net/qq_43142327" target="_blank">
-            <i class="iconfont icon-CN_csdnnet"></i>
-          </a>
           <a href="https://steamcommunity.com/id/oripoin/" target="_blank">
             <i class="iconfont icon-steam"></i>
           </a>
@@ -59,16 +56,4 @@
       </div>
     </div>
   </body>
-  <style>
-    .hans-container {
-      position: fixed;
-      bottom: 0px;
-      left: 0px;
-      right: 0px;
-      width: 100%;
-      height: 80px;
-    }
-  </style>
-  <div id="hans-bolang"></div>
-  <script src="https://api.vvhan.com/api/bolang"></script>
 </html>
